# Bantiapp

./: .flaskenv  .gitignore  ProcFile  README.MD  app.db  config.py  data-dev.sqlite  http_ca.crt  install_rq  myblog.py  pyproject.toml  requirements.txt  startup.sh  tests.py
app/: __init__.py  email.py  extensions.py  forms.py  models.py  notifications.py  routes.py  search.py  tasks.py
app/authentication/: __init__.py  forms.py  routes.py
app/ent/: __init__.py  routes.py
app/errors/: __init__.py  handlers.py
app/feed/: __init__.py  routes.py
app/feed/static/: index_feed.js  index_pusher.js
app/feed/templates/: feed.html  index.html
app/main/: __init__.py  forms.py  routes.py
app/models/: __init__.py  comment.py  message.py  mixins.py  notification.py  post.py  tables.py  task.py  user.py
app/static/css/: login.css  main.css  password_show.css  register.css  reset_password.css
app/static/js/: accordion.js  createPostModal.js  hoilday.js  holiday.js  message.js  navabar_toggler.js  toggle_password.js  typing.js
app/templates/: _comments.html  _messages.html  _pager.html  _post.html  _sidebar.html  _widget.html  base.html  holiday.html  info.html  newbase.html  profile_picture.html  send_message.html  user.html
app/templates/auth/: login.html  register.html  reset_password.html  reset_password_request.html
app/templates/bootstrap templates/: 404.html  500.html  COMMENT.HTML  _index.html  _modal.html  _post.html  base.html  edit_profile.html  index.html  login.html  messages.html  post.html  register.html  reset_password.html  reset_password_request.html  search.html  user.html  w3.html
app/templates/email/: export_posts.html  export_posts.txt  reset_password.html  reset_password.txt
app/templates/errors/: 404.html  500.html
app/templates/main/: _chat.html  _comments.html  _index.html  _messages.html  _pager.html  _post.html  _post_widgets.html  _sidebar_home.html  activities.html  chat.html  footer.html  index.html  large_notification.html  large_search.html  messages.html  navbar.html  notification.html  post.html  post_users.html  search.html  welcome.html
app/templates/main/new chat/: chat.html
app/templates/newtemplate/: w3.html
app/templates/user/: _profile.html  _user_widgets.html  edit_profile.html  followers_list.html  meet_team.html  profile_picture.html  send_message.html  user.html  user_popup.html  user_recommended.html
app/user/: __init__.py  forms.py  routes.py
logs/: bantiapp.log.1  bantiapp.log.2  bantiapp.log.3  bantiapp.log.4  microblog.log.1  microblog.log.7  microblog.log.8  microblog.log.9
migrations/versions/: 3f999eb5319b_new_migrations.py  8ff9b56e4112_tasks.py  aaa557662da0_removed_check_notifications.py  c29363237255_.py  cb334b349ae9_check_notifications.py  e3b119fe89b2_notifications.py  ecdd14dcdbd0_html_post_body.py  f8be5787cb1f_.py
tests/: test_basics.py  test_user_methods.py
(+2 files in other folders)
